# greeneye

./: .gitignore  .zshrc  CMakeLists.txt  CMakePresets.json  LICENSE  aht20.c  aht20.h  i2c_bus.c  i2c_bus.h  main.c
encoder/: pec11r.c  pec11r.h
i2c/: i2c_bus.c  i2c_bus.h
i2c/sensors/aht20/: aht20.c  aht20.h
i2c/sensors/veml7700/: veml7700.c  veml7700.h
i2c/ssd1306/: ssd1306.c  ssd1306.h
led/: ws2812.c  ws2812.h
oled_text/: font_table.c  font_table.h
